# ModbusTempReport

./: .gitignore  README.md
.github/workflows/: cmake-multi-platform-fast-build.yml  cmake-multi-platform.yml
Mgs_project_CICD_TDD/: .gitignore  CMakeLists.txt
Mgs_project_CICD_TDD/README.md/: README.txt
Mgs_project_CICD_TDD/scr/: blink.c
Mgs_project_CICD_TDD/src/: blink.c  main.c
Mgs_project_CICD_TDD/test/: integration_test.c
modbus/: .gitignore  CMakeLists.txt  README.txt  cmakelists_backup.txt  requirements.txt  saveSDC35.py  sdc35_build_pdf1.py  sdc35_build_pdf2.py  sdc35_build_pdf3.py  sdc35_menu.py  sdc35_report1.py  sdc35_report2.py  sdc35_report3.py  test.csv
modbus/include/: driver.h  driver_control.h  sdc35_status.h
modbus/src/: driver.c  driver_control.c  main.c  sendframe.c
modbus/test/: test.c
task1/Task1/: CMakeLists.txt  Task1.c
task2/Task2/: CMakeLists.txt  Task2.c
task3/task3_266078/: CMakeLists.txt  multicore.h  task3_266078.c
task4/task4_266078/: CMakeLists.txt  backup.txt  reakcja na ruch i uderzenie w stół.txt  task4_266078.c  task4_266078_led_event.c  test2queue.txt
